ClangTools: Fix clang-tidy command-line construction

Fixes: QTCREATORBUG-26015
Change-Id: I2850e6efa5b75748599f55e8b9c96757582f5cb4
Reviewed-by: Christian Stenger <christian.stenger@qt.io>